--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -154,3 +154,46 @@
 .back-icon {
     margin-right: 8px;
 }
+
+.forward-icon {
+    margin-left: 8px;
+}
+
+.order-container {
+    display: flex;
+}
+
+.order-index {
+    flex: 1;
+    padding: 8px;
+    margin: 16px 8px 16px 0px;
+    text-align: right;
+}
+
+.order-name {
+    flex: 10;
+}
+
+.order-name-span {
+    flex: 1;
+}
+
+.node-order-card {
+    width: 100%;
+    padding: 8px;
+    margin: 16px 0px;
+    border-radius: 8px;
+    box-sizing: border-box;
+    cursor: move;
+    cursor: grab;
+    cursor: -moz-grab;
+    cursor: -webkit-grab;
+    box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2);
+    transition: 0.3s;
+}
+
+.bottom-link {
+    display:flex;
+    justify-content: end;
+    margin-top: 32px;
+}
